@@ -30,6 +30,10 @@
 
 namespace QSampler {
 
+//-------------------------------------------------------------------------
+// QSampler::MidiActivityLED -- Graphical indicator for MIDI activity.
+//
+
 MidiActivityLED::MidiActivityLED(QString text, QWidget* parent) : QLabel(text, parent) {
 #if CONFIG_LSCP_DEVICE_MIDI
 	setPalette(MIDI_OFF_COLOR);
@@ -54,6 +58,9 @@ void MidiActivityLED::midiDataCeased() {
 	setPalette(MIDI_OFF_COLOR);
 }
 
+//-------------------------------------------------------------------------
+// QSampler::DeviceStatusForm -- Device status informations window.
+//
 
 std::map<int, DeviceStatusForm*> DeviceStatusForm::instances;
 
@@ -62,21 +69,12 @@ DeviceStatusForm::DeviceStatusForm (
 	: QMainWindow(pParent, wflags)
 {
 	m_pDevice = new Device(Device::Midi, DeviceID);
-	DevicePortList ports = m_pDevice->ports();
 
 	if (!centralWidget()) setCentralWidget(new QWidget(this));
 
 	QGridLayout* pLayout = new QGridLayout(centralWidget());
-	for (int i = 0; i < ports.size(); ++i) {
-		QLabel* pLabel =
-			new QLabel(QString("MIDI port \"") + ports[i]->portName() + "\": ");
-		pLabel->setToolTip(QString("Device ID ") + QString::number(ports[i]->portID()));
-		pLayout->addWidget(pLabel, i, 0, Qt::AlignLeft);
-		MidiActivityLED* pLED = new MidiActivityLED();
-		midiActivityLEDs.push_back(pLED);
-		pLayout->addWidget(pLED, i, 1);
-	}
 	centralWidget()->setLayout(pLayout);
+	updateGUIPorts(); // build the GUI
 
 	m_pVisibleAction = new QAction(this);
 	m_pVisibleAction->setCheckable(true);
@@ -92,6 +90,34 @@ DeviceStatusForm::DeviceStatusForm (
 	);
 
 	setWindowTitle(m_pDevice->deviceName() + " Status");
+}
+
+void DeviceStatusForm::updateGUIPorts() {
+	// refresh device informations
+	m_pDevice->setDevice(m_pDevice->deviceType(), m_pDevice->deviceID());
+	DevicePortList ports = m_pDevice->ports();
+
+	// clear the GUI
+	QGridLayout* pLayout = (QGridLayout*) centralWidget()->layout();
+	for (int i = pLayout->count() - 1; i >= 0; --i) {
+		QLayoutItem* pItem = pLayout->itemAt(i);
+		if (!pItem) continue;
+		pLayout->removeItem(pItem);
+		if (pItem->widget()) delete pItem->widget();
+		delete pItem;
+	}
+	midiActivityLEDs.clear();
+
+	// rebuild the GUI
+	for (int i = 0; i < ports.size(); ++i) {
+		QLabel* pLabel =
+			new QLabel(QString("MIDI port \"") + ports[i]->portName() + "\": ");
+		pLabel->setToolTip(QString("Device ID ") + QString::number(ports[i]->portID()));
+		pLayout->addWidget(pLabel, i, 0, Qt::AlignLeft);
+		MidiActivityLED* pLED = new MidiActivityLED();
+		midiActivityLEDs.push_back(pLED);
+		pLayout->addWidget(pLED, i, 1);
+	}
 }
 
 DeviceStatusForm::~DeviceStatusForm() {
@@ -122,6 +148,17 @@ const std::map<int, DeviceStatusForm*>& DeviceStatusForm::getInstances() {
 	return instances;
 }
 
+void DeviceStatusForm::deleteAllInstances() {
+	for (
+		std::map<int, DeviceStatusForm*>::iterator iter = instances.begin();
+		iter != instances.end(); ++iter
+	) {
+		iter->second->hide();
+		delete iter->second;
+	}
+	instances.clear();
+}
+
 void DeviceStatusForm::onDevicesChanged() {
 	MainForm* pMainForm = MainForm::getInstance();
 	if (pMainForm && pMainForm->client()) {
@@ -145,11 +182,17 @@ void DeviceStatusForm::onDevicesChanged() {
 		) {
 			if (instances.find(*iter) == instances.end()) {
 				DeviceStatusForm* pStatusForm =
-					new DeviceStatusForm(*iter, pMainForm);
+					new DeviceStatusForm(*iter);
 				instances[*iter] = pStatusForm;
 			}
 		}
 	}
+}
+
+void DeviceStatusForm::onDeviceChanged(int iDeviceID) {
+	DeviceStatusForm* pForm = DeviceStatusForm::getInstance(iDeviceID);
+	if (!pForm) return;
+	pForm->updateGUIPorts();
 }
 
 } // namespace QSampler
